using NUnit.Framework;
using UnityEngine;

struct BiomeModifiers
{

}


public class BiomeDefinition : ScriptableObject
{
    int EnvironmentType = 0;
    BiomeModifiers Modifiers;
}
